# CppBitmapEditor

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.elv  default.nix  flake.nix
src/: main.cpp
src/app/: main.cpp
src/image/: CMakeLists.txt  bitmap.cpp  bitmap.h  gif.cpp  gif.h  image.cpp  image.h
src/lib_bitmap/: CMakeLists.txt  bitmap.cpp  bitmap.h
src/tests/: tests.cpp
